--- a/src/interfaces/TelaInicial.form
+++ b/src/interfaces/TelaInicial.form
@@ -22,6 +22,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Aeronave"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmCadastrarAeronaveActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jmCadastrarVoo">
               <Properties>
